# crossplatform-tflite-object-detecion

./: .gitignore  README.md  download-tf-dist.sh
android/: .gitignore  README.md  build.gradle
android/app/: CMakeLists.txt  build.gradle
android/app/src/androidTest/java/com/vyw/nativeobjectdetection/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: ObjectDetector.h  native-lib.cpp
android/app/src/main/java/com/vyw/nativeobjectdetection/: MainActivity.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/com/vyw/nativeobjectdetection/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
ios/: Podfile
ios/nativeobjectdetection/: Info.plist  ViewController.swift
ios/nativeobjectdetection.xcodeproj/: project.pbxproj
ios/nativeobjectdetection.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/nativeobjectdetection.xcworkspace/: contents.xcworkspacedata
ios/nativeobjectdetection/Base.lproj/: Main.storyboard
ios/nativeobjectdetection/Wrappers/: OpenCVWrapper.h  OpenCVWrapper.mm  nativeobjectdetection-Bridging-Header.h
native-detector/: ObjectDetector.cpp
